# HedgePy

./: .env  Pipfile  README.md  pyproject.toml
lib/ibapi/ibapi.egg-info/: SOURCES.txt
nb/: Untitled.ipynb  adb.ipynb  dbio.ipynb  sample_data_flat.csv  sample_data_nested.csv  source.py
nb/.ipynb_checkpoints/: source-checkpoint.py  worldbank-checkpoint.py
scratch/: Untitled.ipynb  bloomberg.py  worldbank.py
src/: app.py  config.py
src/api/: api.py  bases.py  client.py  query.py  server.py  session.py  skema.py
src/api/bases/: Controller.py  Data.py  Database.py  IO.py  Logger.py  Message.py  Query.py  Template.py  Vendor.py  _db.py  _vendor.py  data.py  db.py  io.py  vendor.py
src/api/messages/meta/: message.json
src/api/sql/: clear.sql  init.sql
src/api/standards/: iso3166.json  iso4217.json
src/api/templates/: _schema.json  graph.json
src/api/templates/graph/: asset_prices.json
src/api/vendors/: __init__.py  bloomberg.py  figi.py  fred.py  ibkr.py  td.py  worldbank.py
src/gui/: gui.py
src/gui/components/: container.py  launcher.py
src/gui/components/bases/: tab.py
src/gui/components/tabs/: db.py
src/tui/: bases.py  tui.py
src/tui/bases/: messages.py  widgets.py
src/tui/bases/content/: __init__.py  data.py  templates.py
src/tui/content/: __init__.py  database.py  home.py
src/tui/css/: App.tcss  database.tcss  login.tcss  templates.tcss
src/utils/: logs.py  misc.py  taxonomy.py  tlib.py
